Handeling the onclick of viewall button and working on property of recycler view that it can display only 20 at a time

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OpeningActivity"></activity>
+        <activity android:name=".OpeningActivity" />
+        <activity android:name=".ViewAllActivity"></activity>
     </application>
 
 </manifest>
