--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.vibhu.moviesapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -29,7 +31,14 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_video_playing"
             android:theme="@style/FullscreenTheme" />
-        <activity android:name=".CastInfo"></activity>
+        <activity android:name=".CastInfo" />
+        <activity android:name=".SelectActivity" />
+        <activity android:name=".TvStartActivity" />
+        <activity android:name=".TvViewAllActivity" />
+        <activity
+            android:name=".TvDetails"
+            android:label="@string/title_activity_tv_details"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
